Fixed all of the colors to have compliant contrast ratios.
(cherry picked from commit 9189685f8434afd4622eefdf3fb8b27a2f5be3d9)

--- a/public/app.css
+++ b/public/app.css
@@ -1,5 +1,25 @@
+:root {
+    --dark-blue: #034f9a;
+    --red: #bd1425;
+}
+
+a {
+    color: var(--dark-blue);
+    opacity: 0.8;
+    text-decoration: underline;
+}
+
 .login {
     margin-top: 5rem;
+}
+
+.helper-text {
+    color: var(--dark-blue);
+    opacity: 0.8;
+}
+
+.invalid-feedback {
+    color: var(--red);
 }
 
 .nav {
@@ -7,9 +27,32 @@
     margin-bottom: 20px;
 }
 
+.navbar-dark {
+    background-color: var(--dark-blue);
+}
+
+.nav-link {
+    text-decoration: none;
+    opacity: 1;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: var(--dark-blue);
+}
+
+.btn-dark {
+    background-color: var(--dark-blue);
+    border-color: var(--dark-blue);
+}
+
+.no-movies-container {
+    margin-top: 50px;
+    text-align: center;
+}
+
 .notes {
     font-style: italic;
-    color: #13d63f;
+    color: #3951b1;
 }
 
 .dialog-modal {
